
dnl Process this file with autoconf to produce a configure script.
AC_INIT(gamix/gamix.h)
AM_INIT_AUTOMAKE(gamix, 1.11)
AC_PREFIX_DEFAULT(/usr)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_ISC_POSIX

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC

AM_PATH_ALSA(0.5.0)
CFLAGS="$CFLAGS $ALSA_CFLAGS"
LIBS=$ALSA_LIBS

AM_PATH_GLIB(1.2.0,,AC_MSG_ERROR([*** GLIB >= 1.2.0 not installed - please install first ***]))
CFLAGS="$CFLAGS $GLIB_CFLAGS"
LIBS="$LIBS $GLIB_LIBS"

AM_PATH_GTK(1.2.0,,AC_MSG_ERROR([*** GTK+ >= 1.2.0 not installed - please install first ***]),gthread)
CFLAGS="$CFLAGS $GTK_CFLAGS"
LIBS="$LIBS $GTK_LIBS"

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir)

ALL_LINGUAS="ja de"
AM_GNU_GETTEXT

AC_OUTPUT(Makefile intl/Makefile po/Makefile.in gamix/Makefile,
[sed -e "/POTFILE=/r po/POTFILE" po/Makefile.in > po/Makefile])
