
dnl Process this file with autoconf to produce a configure script.
del AC_INIT(gamix/gamix.h)
AM_INIT_AUTOMAKE(gamix, 1.99.p13)
AC_PREFIX_DEFAULT(/usr)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL
AC_ISC_POSIX

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC

CFLAGS_ORIG="$CFLAGS"
LIBS_ORIG="$LIBS"

AM_PATH_ALSA(0.5.0)

CFLAGS="$CFLAGS_ORIG"
LIBS="$LIBS_ORIG"
AC_PATH_PROG(PKGC,pkg-config,no)
if test ! "$PKGC" = "no" ; then
  if ! $PKGC gtk+ ; then
    PKGC="no"
  fi
fi

if test "$PKGC" = "no" ; then
  AM_PATH_GLIB(1.2.0,,AC_MSG_ERROR([*** GLIB >= 1.2.0 not installed - please install first ***]))
  CFLAGS="$CFLAGS_ORIG"
  LIBS="$LIBS_ORIG"

  AM_PATH_GTK(1.2.0,,AC_MSG_ERROR([*** GTK+ >= 1.2.0 not installed - please install first ***]),gthread)

  G_CFLAGS="$GLIB_CFLAGS $GTK_CFLAGS"
  G_LIBS="$GLIB_LIBS $GTK_LIBS"
else
  AC_ARG_WITH(gtk-target, [  --with-gtk-target target gtk [default=gtk+]],
	[gtktarget="gtk+$withval"],[gtktarget="gtk+"])
  PKG_CHECK_MODULES(BASE_DEPENDENCEIS, $gtktarget > 1.2.0)
  G_CFLAGS="`$PKG_CONFIG --cflags $gtktarget`"
  G_LIBS="`$PKG_CONFIG --libs $gtktarget`"
fi

CFLAGS="$CFLAGS_ORIG"
LIBS="$LIBS_ORIG"

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir)

ALL_LINGUAS="ja de"
AM_GNU_GETTEXT

CFLAGS="$CFLAGS_ORIG $ALSA_CFLAGS"
LIBS="$LIBS_ORIG $LIBS"
AC_TRY_RUN([
#include <stdio.h>
#include <stdlib.h>
#include <sys/asoundlib.h>

int main( int argc , char **argv ) {
#if SND_LIB_VERSION >= SND_PROTOCOL_VERSION(0,6,0)
  exit(1));
#else
  exit(0);
#endif
}

],
gamix_src=gamix,
gamix_src=gamix2,
gamix_src=gamix)
AC_SUBST(gamix_src)

AC_TRY_RUN([
#include <stdio.h>
#include <stdlib.h>
#include <sys/asoundlib.h>

int main( int argc , char **argv ) {
	snd_ctl_t *handle;
	snd_ctl_open(&handle,"hw:0");
	exit(0);
}

],
sndctl=yes,
sndctl=no,
sndctl=no)
if test "x$sndctl" = "xyes" ; then
  AC_DEFINE(SNDCTLOPEN2)
fi

if test "x$gamix_src" = "gamix" ; then
  echo "Warning: gamix $VERSION is for ALSA 0.9.0 betaX."
  echo "         if you comipe under ALSA 0.5.x, gamix version is 1.11."
fi

AC_ARG_ENABLE(addconfhost,
  [  --enable-addconfhost    Add hostname to Config file name [default=no]],
  [ enable_addconfhost=yes ])
if test "$enable_addconfhost" = "yes" ; then
  AC_DEFINE(ADD_CONFHOSTNAME)
fi

CFLAGS="$CFLAGS_ORIG $ALSA_CFLAGS $G_CFLAGS"
LIBS="$LIBS_ORIG $ALSA_LIBS $G_LIBS"

AC_OUTPUT(Makefile intl/Makefile po/Makefile.in gamix/Makefile gamix2/Makefile,
[sed -e "/POTFILE=/r po/POTFILE" po/Makefile.in > po/Makefile])
