AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS = -I m4

MAINTAINERCLEANFILES = aclocal.m4 config.* compile configure depcomp \
		       install-sh ltmain.sh missing mkinstalldirs \
		       Makefile.in */Makefile.in */*/Makefile.in \
		       po/Makefile.in.in po/Makevars.template po/Rules-quot \
		       po/*.header po/*.sed po/*.sin po/e16.pot \
		       *~ */*~

SUBDIRS = dox eesh epp src lib config themes fonts scripts misc docs icons pix po

EXTRA_DIST = \
sample-scripts/bouncingball.pl \
sample-scripts/lcdmover.sh \
sample-scripts/testroller.pl \
sample-scripts/shade-pagers.pl \
AUTHORS COMPLIANCE COPYING ChangeLog
